--- a/app/views/home.jade
+++ b/app/views/home.jade
@@ -2,5 +2,5 @@ h1 Concerts
 
 p Authorize us on rdio
 
-form
+form( action="/users/authorize", method="POST" )
   input( type="image", src="../public/images/rdio-logo.png", alt="rdio logo")
