Add barebones client app + jQuery

--- a/app/views/concerts.jade
+++ b/app/views/concerts.jade
@@ -1,1 +1,6 @@
-h1 Concerts are here
+html
+head
+body
+  h1 Concerts are here
+  script( src='//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js' )
+  script( src='public/js/app.js' )
