Add basic client side js + tests to display and change a user's location
- Add Google map which defaults to showing the user's current location
  based on the geolocation API.
- Add form to change city
- Add function to change address of map

--- a/app/views/concerts.jade
+++ b/app/views/concerts.jade
@@ -1,6 +1,20 @@
 html
 head
+  link( rel="stylesheet", type="text/css", href="/public/stylesheets/app.css" )
+  title Concerts
 body
-  h1 Concerts are here
+  h1 What's Your Area?
+  #map-canvas
+  form.location( method="POST" )
+    label( for="city" ) City
+    input( type="text", name="city", id="city" )
+    button( type="submit", name="citySubmitBtn" ) Submit
+    .error-msg
+  form.next-section
+    button( type="submit" ) Next
+
+  // Scripts
   script( src='//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js' )
+  script( src='//maps.googleapis.com/maps/api/js?key=AIzaSyBAv9D3K6sg_qivhqaeBvoL2wAGapLCCVM&sensor=false' )
   script( src='public/js/app.js' )
+
