--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -3,6 +3,8 @@ head
   meta( name="viewport", content="width=device-width,initial-scale=1" )
   title= title
   link( rel="stylesheet", type="text/css", href="/public/stylesheets/pure-min.css" )
+  link( rel="stylesheet", type="text/css", href="/public/stylesheets/grids-responsive-min.css" )
+  link( rel="stylesheet", type="text/css", href='http://fonts.googleapis.com/css?family=Open+Sans' )
   link( rel="stylesheet", type="text/css", href="/public/stylesheets/app.css" )
 body
   block content
