--- a/app/views/concerts.jade
+++ b/app/views/concerts.jade
@@ -23,5 +23,6 @@ block content
 // Scripts
 block scripts
   script( src='//maps.googleapis.com/maps/api/js?key=AIzaSyBAv9D3K6sg_qivhqaeBvoL2wAGapLCCVM&sensor=false' )
-  script( src='public/js/app.js' )
+  script( src='public/js/moment.min.js' )
   script( src='public/js/templates.js' )
+  script( src='public/js/app.js' )
