--- a/app/public/stylesheets/app.css
+++ b/app/public/stylesheets/app.css
@@ -29,19 +29,25 @@ body {
 }
 
 .event-listings.box {
-  margin-top : 5%;
+  margin-top    : 5%;
+  margin-bottom : 5%;
 }
 
 .event-listings.box-body {
-  padding : 2%;
+  width : 100%;
+}
+
+.event-wrapper {
+  padding    : 4%;
+  box-shadow : inset 0 0 1px #333333;
 }
 
 .event {
-  -o-transition:.5s;
-  -ms-transition:.5s;
-  -moz-transition:.5s;
-  -webkit-transition:.5s;
-  transition:.5s;
+  -o-transition      : .5s;
+  -ms-transition     : .5s;
+  -moz-transition    : .5s;
+  -webkit-transition : .5s;
+  transition         : .5s;
 }
 
 .event-listings.box-body > .event:hover {
@@ -71,12 +77,13 @@ body {
 .event-date {
   width         : 4.85em;
   height        : 4.85em;
+  max-width     : 5.25em;
   border-radius : 3.125em;
   font-size     : 1.25em;
   color         : #fff;
   line-height   : 4.85em;
   text-align    : center;
-  background    : #000
+  background    : #000 margin : 0 auto;
 }
 
 .next-page {
@@ -587,5 +594,22 @@ body {
 
 .csspinner {
   z-index : 9999;
+}
+
+/*Small screens*/
+@media screen and (max-width : 35.5em) {
+  .event-wrapper {
+    text-align : center;
+  }
+
+  .event-date-box,
+  .event-info-box {
+    display : block;
+    margin  : 0 auto;
+  }
+
+  .event-date {
+    width : 100%;
+  }
 }
 
