--- a/app/views/client_templates/event_listings.jade
+++ b/app/views/client_templates/event_listings.jade
@@ -7,12 +7,13 @@
   else
     each concert in locals.concerts
       .pure-u-1.pure-u-md-1-2.pure-u-lg-1-3.event
-        .event-date-box
-          .event-date= concert.formatted_start_date
-        .event-info-box
-          h3= concert.users_artist
-          h4 Where: #{concert.location.city}
-          h4 Venue : #{ concert.venue.displayName}
-          h4 Time: #{ concert.start.time }
-          a( href="#{ concert.uri }", alt="Concert information", target="_blank" )
-            h4 More Info
+        .event-wrapper
+          .event-date-box
+            .event-date= concert.formatted_start_date
+          .event-info-box
+            h3= concert.users_artist
+            h4 Where: #{concert.location.city}
+            h4 Venue : #{ concert.venue.displayName}
+            h4 Time: #{ concert.start.time }
+            a( href="#{ concert.uri }", alt="Concert information", target="_blank" )
+              h4 More Info
