Switch to using SASS
* Add grunt job to watch scss files
* Add grunt job to combine css files
* Use bower to dl Pure CSS framework.

--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -2,10 +2,7 @@ doctype html
 head
   meta( name="viewport", content="width=device-width,initial-scale=1" )
   title= title
-  link( rel="stylesheet", type="text/css", href="/public/stylesheets/pure-min.css" )
-  link( rel="stylesheet", type="text/css", href="/public/stylesheets/grids-responsive-min.css" )
-  link( rel="stylesheet", type="text/css", href='http://fonts.googleapis.com/css?family=Open+Sans' )
-  link( rel="stylesheet", type="text/css", href="/public/stylesheets/app.css" )
+  link( rel="stylesheet", type="text/css", href="/public/stylesheets/app.min.css" )
 body
   block content
   script( src='//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js' )
