--- a/app/views/styles/app.scss
+++ b/app/views/styles/app.scss
@@ -83,7 +83,8 @@ body {
   color         : #fff;
   line-height   : 4.85em;
   text-align    : center;
-  background    : #000 margin : 0 auto;
+  background    : #000;
+  margin : 0 auto;
 }
 
 .next-page {
@@ -612,4 +613,3 @@ body {
     width : 100%;
   }
 }
-
