--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -2,6 +2,7 @@ doctype html
 head
   meta( name="viewport", content="width=device-width,initial-scale=1" )
   title= title
+  link( rel="stylesheet", type="text/css", href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" )
   link( rel="stylesheet", type="text/css", href="/public/stylesheets/app.min.css" )
 body
   block content
