--- a/app/views/styles/app.scss
+++ b/app/views/styles/app.scss
@@ -1,9 +1,22 @@
-* {
-  font-family : 'Open Sans', sans-serif;
+$font-stack : 'Open Sans', sans-serif;
+$normal : 400;
+$semibold : 600;
+$bold : 500;
+$light : 300;
+
+$main-orange : #FFBA03;
+
+html, button, input, select, textarea,
+.pure-g [class *= "pure-u"] {
+  font-family : $font-stack;
 }
 
 body {
   background-color : black;
+}
+
+h3 {
+  font-weight : $semibold;
 }
 
 #map-canvas {
@@ -15,7 +28,7 @@ body {
 }
 
 .box-header {
-  background-color : #FFBA03;
+  background-color : $main-orange;
   text-align       : center;
 }
 
@@ -74,6 +87,11 @@ body {
   margin : 0;
 }
 
+.event-info-box > h4 {
+  margin          : 0.5em 0;
+  font-weight     : $normal;
+}
+
 .event-date {
   width         : 4.85em;
   height        : 4.85em;
@@ -84,7 +102,7 @@ body {
   line-height   : 4.85em;
   text-align    : center;
   background    : #000;
-  margin : 0 auto;
+  margin        : 0 auto;
 }
 
 .next-page {
