--- a/app/views/concerts.jade
+++ b/app/views/concerts.jade
@@ -2,12 +2,13 @@ extends ./layout
 
 block content
   .overlay.hide
-  .spinner.duo
+
   section.pure-g.box
     .pure-u-1.box-header
       h1 Looking Around Here?
     .pure-u-1.box-body
       #map-canvas
+      .spinner.traditional
       form.pure-form.location( method="post" )
         fieldset
           legend Wrong area? Enter your city below.
