--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -5,6 +5,7 @@ head
   link( rel="stylesheet", type="text/css", href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" )
   link( rel="stylesheet", type="text/css", href="/public/stylesheets/app.min.css" )
 body
+  include header
   block content
   script( src='//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js' )
   block scripts
