--- a/app/views/home.jade
+++ b/app/views/home.jade
@@ -7,3 +7,6 @@ block content
       h3  See who in your rdio collection is touring your city this week.
       form( action="/users/authorize", method="POST" )
         button.rdio-signin.pure-button.pure-button-primary Sign in with rdio
+      form( action="/users/demo", method="POST" )
+        button.demo-signin.pure-button.pure-button-primary Demo
+
