--- a/views/styles/app.scss
+++ b/views/styles/app.scss
@@ -12,6 +12,7 @@ html, button, input, select, textarea,
   background-color: #42B8DD
 }
 
+// Image by Peter Lee. Original source: https://www.flickr.com/photos/oldpatterns/8021992629/
 body {
   background: url( '../images/concerts.jpg' ) no-repeat center center fixed;
   background-size: cover;
