--- a/views/home.jade
+++ b/views/home.jade
@@ -2,12 +2,12 @@ extends layout
 block content
 
   section.main-landing
-    .box2
-      h1 Concert Listings for your favorite artists
-      h3  See who in your rdio collection is touring your city this week.
-      form( action="/users/authorize", method="POST" )
-        button.rdio-signin.pure-button.pure-button-primary Sign in with rdio
-      p or
-      form( action="/users/demo", method="POST" )
-        button.demo-signin.pure-button.pure-button-primary Try a Demo
+    h1 Concert Listings for your favorite artists
+    h3  See who in your rdio collection is touring your city this week.
+    form( action="/users/authorize", method="POST" )
+      button.rdio-signin.pure-button.pure-button-primary Sign in with rdio
+    p or
+    form( action="/users/demo", method="POST" )
+      button.demo-signin.pure-button.button-secondary Try a Demo
+    p.description We'll use our favorite artists
 
