--- a/views/styles/app.scss
+++ b/views/styles/app.scss
@@ -26,6 +26,11 @@ h3 {
   font-weight : $semibold;
 }
 
+.button-secondary {
+  color: white;
+  background-color: #42B8DD;
+}
+
 .main-landing {
   background-color: $off-white;
   width: 50%;
@@ -37,6 +42,7 @@ h3 {
   margin-right:auto;
   padding: 3%;
   border-radius: 0.5em;
+  text-align: center;
 
   h1, h3 {
     color: black;
@@ -44,6 +50,13 @@ h3 {
 
   h3 {
     font-weight: $light;
+  }
+
+  .description {
+    margin-top: .2em;
+    font-weight: $normal;
+    font-size: .9em;
+    font-style: italic;
   }
 }
 
