Add Concerts by Songkick logo for attribution

--- a/views/client_templates/event_listings.jade
+++ b/views/client_templates/event_listings.jade
@@ -1,5 +1,6 @@
 .pure-u-1.box-header
   h1 Event Listings
+  img( src="public/images/songkick.png", alt="Songkick logo" )
 
 .event-listings.box-body
   if (locals.concerts.length < 1)
