--- a/views/styles/app.scss
+++ b/views/styles/app.scss
@@ -77,6 +77,11 @@ h3 {
   }
 }
 
+.box-subheader {
+  background-color: $off-white
+  height: 2.5em;
+}
+
 .box-body {
   background-color : white;
 }
