Style changes for logo

--- a/views/client_templates/event_listings.jade
+++ b/views/client_templates/event_listings.jade
@@ -1,7 +1,8 @@
 .pure-u-1.box-header
   h1 Event Listings
   .box-subheader
-    img( src="public/images/songkick.png", alt="Songkick logo" )
+    a( href="http://songkick.com", target="_blank" )
+      img( src="public/images/songkick.png", alt="Songkick logo" )
 
 .event-listings.box-body
   if (locals.concerts.length < 1)
