--- a/views/styles/app.scss
+++ b/views/styles/app.scss
@@ -78,8 +78,9 @@ h3 {
 }
 
 .box-subheader {
-  background-color: $off-white
+  background-color: $off-white;
   height: 2.5em;
+  padding: 0.5em 0;
 }
 
 .box-body {
