Display event dates searched on concerts page
note: start/end dates are generated by the client for now, but they should
come from the backend once functionality to search a specified range is
added.

--- a/views/client_templates/event_listings.jade
+++ b/views/client_templates/event_listings.jade
@@ -1,5 +1,6 @@
 .pure-u-1.box-header
   h1 Event Listings
+  h4.search-dates For #{ locals.search_start } - #{ locals.search_end }
   .box-subheader
     a( href="http://songkick.com", target="_blank" )
       img( src="public/images/songkick.png", alt="Songkick logo" )
