--- a/views/styles/app.scss
+++ b/views/styles/app.scss
@@ -95,6 +95,14 @@ h3 {
 .event-listings.box {
   margin-top    : 5%;
   margin-bottom : 5%;
+
+  h1 {
+    margin-bottom: 0;
+  }
+  .search-dates {
+    margin-top: 0;
+    font-weight: 600;
+  }
 }
 
 .event-listings.box-body {
