--- a/views/concerts.jade
+++ b/views/concerts.jade
@@ -16,9 +16,9 @@ block content
             input( type="text", placeholder="city name", name="city", id="city" )
           button.pure-button.button-secondary( type="submit", name="citysubmitbtn" ) Change city
         .error-msg
-  section.pure-g.getEvents
-    button.pure-button.pure-button-primary.getEventsBtn( type="submit", name="getEventsBtn" ) Show concerts
-  section.pure-g.event-listings.box.hide
+    .getEvents
+      button.pure-button.pure-button-primary.getEventsBtn( type="submit", name="getEventsBtn" ) Show concerts
+  section.event-listings.pure-g.box.hide
 
 
 // Scripts
