--- a/views/client_templates/event_listings.jade
+++ b/views/client_templates/event_listings.jade
@@ -5,25 +5,23 @@
     a( href="http://songkick.com", target="_blank" )
       img( src="public/images/songkick.png", alt="Songkick logo" )
 
-.event-listings.box-body
-  if (locals.concerts.length < 1)
-    h2 No Events Found
-  else
-    each concert in locals.concerts
-      .pure-u-1.pure-u-md-1-2.pure-u-lg-1-3.event
-        .event-wrapper
-          .event-date-box
-            .event-date= concert.formatted_start_date
-          .event-info-box
-            h3= concert.users_artist
-            h4 Where:
-              = ' '
-              span.minor= concert.location.city
-            h4 Venue:
-              = ' '
-              span.minor= concert.venue.displayName
-            h4 Time:
-              = ' '
-              span.minor= concert.start.time
-            a( href="#{ concert.uri }", alt="Concert information", target="_blank" )
-              h4 More Info
+if (locals.concerts.length < 1)
+  h2 No Events Found
+else
+  each concert in locals.concerts
+    .pure-u-1.pure-u-md-1-2.pure-u-lg-1-3.event-wrapper
+      .event-date-box
+        .event-date= concert.formatted_start_date
+      .event-info-box
+        h3= concert.users_artist
+        h4 Where:
+          = ' '
+          span.minor= concert.location.city
+        h4 Venue:
+          = ' '
+          span.minor= concert.venue.displayName
+        h4 Time:
+          = ' '
+          span.minor= concert.start.time
+        a( href="#{ concert.uri }", alt="Concert information", target="_blank" )
+          h4 More Info
