Add option to retrieve more than 1 week's worth of events
* Events sorted by start date
* Update UI to retrieve and display additional events

--- a/views/concerts.jade
+++ b/views/concerts.jade
@@ -19,6 +19,12 @@ block content
     .getEvents
       button.pure-button.pure-button-primary.getEventsBtn( type="submit", name="getEventsBtn" ) Show concerts
   section.event-listings.pure-g.box.hide
+    .pure-u-1.box-header
+      h1 Event Listings
+      h4.search-dates
+      .box-subheader
+        a( href="http://songkick.com", target="_blank" )
+          img( src="public/images/songkick.png", alt="Songkick logo" )
 
 
 // Scripts
