--- a/views/client_templates/event_listings.jade
+++ b/views/client_templates/event_listings.jade
@@ -1,12 +1,6 @@
-.pure-u-1.box-header
-  h1 Event Listings
-  h4.search-dates For #{ locals.search_start } - #{ locals.search_end }
-  .box-subheader
-    a( href="http://songkick.com", target="_blank" )
-      img( src="public/images/songkick.png", alt="Songkick logo" )
-
 if (locals.concerts.length < 1)
-  h2 No Events Found
+  .pure-u-1.event-wrapper.empty-listings
+    h2 No Events Found
 else
   each concert in locals.concerts
     .pure-u-1.pure-u-md-1-2.pure-u-lg-1-3.event-wrapper
