Add Echonest logo in header

--- a/views/header.jade
+++ b/views/header.jade
@@ -1,4 +1,6 @@
 header
+  a( href="http://www.echonest.com", target="_blank" )
+    img.logo( src="/public/images/echonest_logo.png" )
   ul.menu
     li.menu-item
       a( href="/about", alt="About page" ) About
