--- a/views/styles/header.scss
+++ b/views/styles/header.scss
@@ -7,6 +7,12 @@ header {
   width: 100%;
   background-color: #000;
 
+  .logo {
+    float: left;
+    padding-top: 1em;
+    padding-left: 1em;
+  }
+
   .menu {
     margin: 0;
     padding: 1em;
