--- a/views/about.jade
+++ b/views/about.jade
@@ -1,5 +1,17 @@
 extends layout
 block content
   section.about-page.main-landing
-    .box2
-      p The About Page
+    p This app uses the 
+      a( href="http://www.rdio.com") Rdio
+      | , 
+      a( href="http://www.echonest.com") Echonest
+      | , and 
+      a( href="http://www.songkick.com") Songkick
+      |  APIs to retrieve a list of upcoming concerts for the artists in your Rdio collection.
+    p The background photo is from 
+      a( href="https://www.flickr.com/photos/oldpatterns/8021992629/" ) Peter Lee
+      | .
+
+    p
+      a( href="https://bitbucket.org/rayalynn/concerts/", target="_blank" ) Source code
+
