Minor UI fixes for event listings page

--- a/views/concerts.jade
+++ b/views/concerts.jade
@@ -11,9 +11,9 @@ block content
       .spinner.traditional
       form.pure-form.location( method="post" )
         fieldset
-          legend Look somewhere else
+          legend Look somewhere else:
           label( for="city" )
-            input( type="text", placeholder="city name", name="city", id="city" )
+            input( type="text", placeholder="city name or zipcode", name="city", id="city" )
           button.pure-button.button-secondary( type="submit", name="citysubmitbtn" ) Change city
         .error-msg
     .getEvents
