--- a/views/client_templates/event_listings.jade
+++ b/views/client_templates/event_listings.jade
@@ -8,13 +8,13 @@ else
         .event-date= concert.formatted_start_date
       .event-info-box
         h3= concert.users_artist
-        h4 Where:
+        h4.highlight Where:
           = ' '
           span.minor= concert.location.city
-        h4 Venue:
+        h4.highlight Venue:
           = ' '
           span.minor= concert.venue.displayName
-        h4 Time:
+        h4.highlight Time:
           = ' '
           span.minor= concert.start.time
         a( href="#{ concert.uri }", alt="Concert information", target="_blank" )
